// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`int8 schema test invalid values: -1.5 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must be integer[39m
[31m    Path:     dataTypes/int8.schema.json#/type[39m
[31m[39m"
`;

exports[`int8 schema test invalid values: -129 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must be >= -128[39m
[31m    Path:     dataTypes/int8.schema.json#/minimum[39m
[31m[39m"
`;

exports[`int8 schema test invalid values: 128 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must be <= 127[39m
[31m    Path:     dataTypes/int8.schema.json#/maximum[39m
[31m[39m"
`;
